# kamelo

./: .dockerignore  .gitignore  .gitlab-ci.yml  030_max.kore  Dockerfile  KaMeLo  LP_p_term.ml  LP_printer.ml  Makefile  README.md  axiom.ml  cmd_line.ml  count_data.ml  dependency_graph.ml  display_console.ml  dune  dune-project  gen_tests.sh  import.ml  iterator.ml  klexer.mll  kparser.mly  lambdapi.pkg  main.ml  max_any.kore  output.ml  podman.sh  preprocessing.ml  printer.ml  symbol.ml  syntax.ml  tests.kore  translate.ml  type.ml
Sauv/: minus_mini_exec.lp
Tests/: 001C_one_sort.kore  001D_one_empty_attribut.kore  001Z_basic-k.kore  002F_one_axiom.kore  002Z_inj.kore  003B_skip_comment.kore  003C_skip_comment_only.kore  003E_dotk_no_attri.kore  003Z_kseq.kore  005Z_four_modules.kore  006Z_several_sorts_b.kore  012Z_constructor.kore  013Z_assoc.kore  014Z_comm.kore  015Z_unit_left.kore  016Z_unit_right.kore  017A_one_initializer.kore  017Z_initializer.kore  019Z_projection.kore  025D_sorts_symbols.kore  025G_rewriting_rule.kore  050Z_imp.kore  12_minus.k  imp.k  minus-mini.k  prelude.lp
domains-kompiled/: allRules.txt  compiled.txt  definition.kore  mainModule.txt  parsed.txt  syntaxDefinition.kore
sauv/: imp_sauv.lp  minus_mini_exec_beautiful.lp
src/: README.md  dune  lib.lp  main.ml
tests/: .gitignore  002A_one_symbol.kore  002I_very_complex_axiom.kore  003F_dotk_kseq_append_no_attri.kore  003G_dotk_kseq_append.kore  006A_simpl_source_location.kore  007Z_sorts_symbols_b.kore  011Z_functional.kore  030_max.kore  050Z_imp.kore  four_minus.k  gen_tests.sh  (+4 more)
(+1124 files in other folders)
